ADD PUT endpoints and separate Post/Put schemas for all routes
